--- a/src/app/main/contract-signature/shared/model/forward-contract/forward-contract.component.html
+++ b/src/app/main/contract-signature/shared/model/forward-contract/forward-contract.component.html
@@ -129,7 +129,7 @@
       </div>
     </div>
 
-    <div class="name-item" *ngIf="isReqCardIdHsm">
+    <div class="name-item" *ngIf="isReqCardIdHsm || isReqCardIdCts">
       <div class="label_item">{{'tax_code' | translate}} <span class="require_star">*</span></div>
       <div class="input-data">
         <input style="width: 88%" autocomplete="off" type="text" formControlName="card_id" class="input-text">
