--- a/src/app/main/contract-signature/shared/model/forward-contract/forward-contract.component.html
+++ b/src/app/main/contract-signature/shared/model/forward-contract/forward-contract.component.html
@@ -94,14 +94,14 @@
       </div>
     </div>
 
-    <!-- <div class="name-item">
+    <div class="name-item" *ngIf="this.dataSign">
       <div class="label_item">{{'user.sign-type' | translate}} <span class="require_star">*</span></div>
       <div class="custom-multiselect">
         <ng-multiselect-dropdown placeholder="{{'choose' | translate }}" [settings]="dropdownSignTypeSettings" [data]="dataSign" formControlName="dataSign"
         (onSelect)="onItemSelect($event)">
         </ng-multiselect-dropdown>
       </div>
-    </div> -->
+    </div>
 
     <div class="name-item" *ngIf="isReqPhone && this.login == 'email'">
       <div class="label_item">{{'user.phone' | translate}} <span class="require_star">*</span></div>
