--- a/src/app/main/contract/form-contract/infor-contract-form/infor-contract-form.component.html
+++ b/src/app/main/contract/form-contract/infor-contract-form/infor-contract-form.component.html
@@ -102,7 +102,7 @@
     <div class="form-group">
       <div class="label_item">{{'expire.date.contract' | translate}}</div>
       <div>
-        <p-calendar [(ngModel)]="this.datasForm.expire_time" [minDate]="minDate" [showIcon]="true" [readonlyInput]="false"
+        <p-calendar [(ngModel)]="this.datasForm.contract_expire_time" [minDate]="minDate" [showIcon]="true" [readonlyInput]="false"
           aria-placeholder="chọn ngày hết hạn hợp đồng" dateFormat="dd/mm/yy"></p-calendar>
       </div>
     </div>
