--- a/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
+++ b/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
@@ -152,7 +152,7 @@
                       </div>
                       <div class="input-data">
                         <img class="input-img">
-                        <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="d.email">
+                        <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="d.phone">
                       </div>
                     </div>
 
@@ -356,7 +356,7 @@
                   <div style="display: flex;">
                     <div class="input-data" style="width: 85%;">
                       <img class="input-img">
-                      <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="d.email">
+                      <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="d.phone">
                     </div>
 
                     <div class="input-data" style="width: 7%;margin-left: 8%;">
@@ -984,7 +984,7 @@
                         </div>
                         <div class="input-data">
                           <img class="input-img">
-                          <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="d.email">
+                          <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="d.phone">
                         </div>
                       </div>
 
@@ -1165,7 +1165,7 @@
                     <div style="display: flex;">
                       <div class="input-data" style="width: 85%;">
                         <img class="input-img">
-                        <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="d.email">
+                        <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="d.phone">
                       </div>
 
                       <div class="input-data" style="width: 7%;margin-left: 8%;">
@@ -1606,7 +1606,7 @@
                     <div style="display: flex;">
                       <div class="input-data" style="width: 85%;">
                         <img class="input-img">
-                        <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="d.email">
+                        <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="d.phone">
                       </div>
 
                       <div class="input-data" style="width: 7%;margin-left: 8%;">
