[Fix - Step2/NB] Tách biến lưu giá trị email/phone - hđ ko theo mẫu

--- a/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
+++ b/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
@@ -83,7 +83,7 @@
                 </div>
 
                 <!--NB-->
-                <div class="participants__name" *ngIf="d.login_by == 'email' && this.site == 'NB'">
+                <div class="participants__name" *ngIf="d.login_by == 'email' && this.site == 'NB'"> 
                   <div class="label_detail text-color">Email&nbsp;
                     <span class="required-title">*</span>
                   </div>
@@ -100,7 +100,7 @@
                   <div style="display: flex;">
                     <div class="input-data" style="width: 91%;margin-right: -3%;">
                       <img class="input-img">
-                      <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="d.email">
+                      <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="d.phone">
                     </div>
 
                     <div class="participants__name" style="width: 17%;margin-left: 5%;">
@@ -454,7 +454,7 @@
                   </div>
                   <div class="input-data">
                     <!-- <img src="assets/img/login_email.svg" class="input-img"> -->
-                    <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="d.email">
+                    <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="d.phone">
                   </div>
                 </div>
 
@@ -933,7 +933,7 @@
                     <div style="display: flex;">
                       <div class="input-data" style="width: 91%;margin-right: -3%;">
                         <img class="input-img">
-                        <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="d.email">
+                        <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="d.phone">
                       </div>
 
                       <div class="participants__name" style="width: 17%;margin-left: 5%;">
@@ -1258,7 +1258,7 @@
                         class="required-title">*</span></div>
                     <div class="input-data">
                       <!-- <img src="assets/img/login_email.svg" class="input-img"> -->
-                      <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="d.email">
+                      <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="d.phone">
                     </div>
                   </div>
 
@@ -1705,7 +1705,7 @@
                         class="required-title">*</span></div>
                     <div class="input-data">
                       <!-- <img src="assets/img/login_email.svg" class="input-img"> -->
-                      <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="d.email">
+                      <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="d.phone">
                     </div>
                   </div>
 
