--- a/src/app/main/contract/form-contract/party-contract-form/party-contract-form.component.html
+++ b/src/app/main/contract/form-contract/party-contract-form/party-contract-form.component.html
@@ -101,7 +101,7 @@
                   <div style="display: flex;">
                     <div class="input-data" style="width: 91%;margin-right: -3%;">
                       <img class="input-img">
-                      <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="d.email">
+                      <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="d.phone">
                     </div>
 
                     <div class="participants__name" style="width: 17%;margin-left: 5%;">
@@ -153,7 +153,7 @@
                       </div>
                       <div class="input-data">
                         <img class="input-img">
-                        <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="d.email">
+                        <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="d.phone">
                       </div>
                     </div>
 
@@ -351,7 +351,7 @@
                   <div style="display: flex;">
                     <div class="input-data" style="width: 85%;">
                       <img class="input-img">
-                      <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="d.email">
+                      <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="d.phone">
                     </div>
 
                     <div class="input-data" style="width: 7%;margin-left: 8%;">
@@ -445,7 +445,7 @@
                   </div>
                   <div class="input-data">
                     <!-- <img src="assets/img/login_email.svg" class="input-img"> -->
-                    <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="d.email">
+                    <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="d.phone">
                   </div>
                 </div>
 
@@ -942,7 +942,7 @@
                     <div style="display: flex;">
                     <div class="input-data" style="width: 91%;margin-right: -3%;">
                       <img class="input-img">
-                      <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="d.email">
+                      <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="d.phone">
                     </div>
 
                     <div class="participants__name" style="width: 17%;margin-left: 5%;">
@@ -993,7 +993,7 @@
                         </div>
                         <div class="input-data">
                           <img class="input-img">
-                          <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="d.email">
+                          <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="d.phone">
                         </div>
                       </div>
 
@@ -1098,7 +1098,7 @@
 
                       <div>
                         <input (change)="changeTypeSign(d, index,id, 'sign_partner')" type="radio" name="checkPhoneMailPartSign_{{index}}_{{id}}"
-                          [value]="email" [(ngModel)]="email" />
+                          [value]="email" [(ngModel)]="d.login_by" />
                       </div>&nbsp;
                       <div>
                         {{'typeOfSignEmail' | translate}}
@@ -1180,7 +1180,7 @@
                     <div style="display: flex;">
                       <div class="input-data" style="width: 85%;">
                         <!-- <img src="assets/img/login_email.svg" class="input-img"> -->
-                        <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="d.email">
+                        <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="d.phone">
                       </div>
 
                       <div class="input-data" style="width: 7%;margin-left: 8%;">
@@ -1271,7 +1271,7 @@
                         class="required-title">*</span></div>
                     <div class="input-data">
                       <!-- <img src="assets/img/login_email.svg" class="input-img"> -->
-                      <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="d.email">
+                      <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="d.phone">
                     </div>
                   </div>
 
@@ -1664,7 +1664,7 @@
                     <div style="display: flex;">
                     <div class="input-data" style="width: 85%;">
                       <!-- <img src="assets/img/login_email.svg" class="input-img"> -->
-                      <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="d.email">
+                      <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="d.phone">
                     </div>
 
                     <div class="input-data" style="width: 7%;margin-left: 8%;">
@@ -1762,7 +1762,7 @@
                         class="required-title">*</span></div>
                     <div class="input-data">
                       <!-- <img src="assets/img/login_email.svg" class="input-img"> -->
-                      <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="d.email">
+                      <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="d.phone">
                     </div>
                   </div>
 
