[Fix - Step2] Tách biến lưu giá trị email/phone - mẫu hđ

--- a/src/app/main/contract-template/shared/model/determine-signer/determine-signer.component.html
+++ b/src/app/main/contract-template/shared/model/determine-signer/determine-signer.component.html
@@ -102,7 +102,7 @@
                   <div style="display: flex;">
                     <div class="input-data" style="width: 91%;margin-right: -3%;">
                       <img class="input-img">
-                      <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="d.email">
+                      <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="d.phone">
                     </div>
 
                     <div class="participants__name" style="width: 17%;margin-left: 5%;">
@@ -154,7 +154,7 @@
                       </div>
                       <div class="input-data">
                         <img class="input-img">
-                        <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="d.email">
+                        <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="d.phone">
                       </div>
                     </div>
 
@@ -344,7 +344,7 @@
                   <div style="display: flex;">
                     <div class="input-data" style="width: 85%;">
                       <img class="input-img">
-                      <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="d.email">
+                      <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="d.phone">
                     </div>
 
                     <div class="input-data" style="width: 7%;margin-left: 8%;">
@@ -437,7 +437,7 @@
                       class="required-title">*</span></div>
                   <div class="input-data">
                     <!-- <img src="assets/img/login_email.svg" class="input-img"> -->
-                    <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="d.email">
+                    <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="d.phone">
                   </div>
                 </div>
 
