--- a/src/app/main/contract/contract.component.html
+++ b/src/app/main/contract/contract.component.html
@@ -62,6 +62,11 @@
                                         translate}}</span>
                                 </div>
                             </div>
+                            <div class="row">
+                              <div class="item_contract_infor">
+                                <u style="color: #106DB6; cursor: pointer" (click)="processHandleContract(item.id)">{{'contract_processing_flow' | translate}}</u>
+                              </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -232,6 +237,11 @@
                                         translate}}</span>
                                 </div>
                             </div>
+                            <div class="row">
+                              <div class="item_contract_infor">
+                                <u style="color: #106DB6; cursor: pointer" (click)="processHandleContract(item.id)">{{'contract_processing_flow' | translate}}</u>
+                              </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -380,6 +390,11 @@
                                         translate}}</span>
                                 </div>
                             </div>
+                            <div class="row">
+                              <div class="item_contract_infor">
+                                <u style="color: #106DB6; cursor: pointer" (click)="processHandleContract(item.id)">{{'contract_processing_flow' | translate}}</u>
+                              </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -497,6 +512,11 @@
                                         {{getNameStatusCeca(item.status, item.ceca_push, item.ceca_status) |
                                         translate}}</span>
                                 </div>
+                            </div>
+                            <div class="row">
+                              <div class="item_contract_infor">
+                                <u style="color: #106DB6; cursor: pointer" (click)="processHandleContract(item.id)">{{'contract_processing_flow' | translate}}</u>
+                              </div>
                             </div>
                         </div>
                     </div>
@@ -648,6 +668,11 @@
                                             {{getNameStatusCeca(item.status, item.ceca_push, item.ceca_status) |
                                             translate}}</span>
                                     </div>
+                                </div>
+                                <div class="row">
+                                  <div class="item_contract_infor">
+                                    <u style="color: #106DB6; cursor: pointer" (click)="processHandleContract(item.id)">{{'contract_processing_flow' | translate}}</u>
+                                  </div>
                                 </div>
                             </div>
                         </div>
@@ -803,6 +828,11 @@
                                             translate}}</span>
                                     </div>
                                 </div>
+                                <div class="row">
+                                  <div class="item_contract_infor">
+                                    <u style="color: #106DB6; cursor: pointer" (click)="processHandleContract(item.id)">{{'contract_processing_flow' | translate}}</u>
+                                  </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -953,6 +983,11 @@
                                           {{getNameStatusCeca(item.status, item.ceca_push, item.ceca_status) |
                                           translate}}</span>
                                   </div>
+                              </div>
+                              <div class="row">
+                                <div class="item_contract_infor">
+                                  <u style="color: #106DB6; cursor: pointer" (click)="processHandleContract(item.id)">{{'contract_processing_flow' | translate}}</u>
+                                </div>
                               </div>
                           </div>
                       </div>
