--- a/src/app/main/contract-signature/shared/model/processing-handle-econtract/processing-handle-econtract.component.html
+++ b/src/app/main/contract-signature/shared/model/processing-handle-econtract/processing-handle-econtract.component.html
@@ -27,7 +27,7 @@
                     <span style="color: dimgray" *ngIf="d.typeOfSign && this.lang == 'vi' || !this.lang">{{'user.sign-type' | translate}}: {{d.typeOfSign.name ? d.typeOfSign.name : ''}}</span>
 
                     <span style="color: dimgray" *ngIf="d.typeOfSign && this.lang == 'en'">{{'user.sign-type' | translate}}: {{d.typeOfSign.name ? d.typeOfSign.name.replace("Ký ảnh và OTP"," Sign by OTP").replace("Ký eKYC","Sign eKYC").replace("Ký số bằng","Sign by").replace("và","and"): ''}}</span>
-                    <span style="color: dimgray" *ngIf="d.card_id">MST/CCCD: {{d.card_id}}</span>
+                    <span style="color: dimgray" *ngIf="d.card_id && !(d.typeOfSign.id == 1 || d.typeOfSign.id == 3 || d.typeOfSign.id == 7) ">MST/CCCD: {{d.card_id}}</span>
                 </div>
 
 
