[RemoteSigning] Ghép API, bổ sung ký với con dấu

--- a/src/app/main/contract-signature/display-digital-signature/display-digital-signature.component.html
+++ b/src/app/main/contract-signature/display-digital-signature/display-digital-signature.component.html
@@ -122,3 +122,11 @@
     </div> -->
 </div>
 
+<!-- Remote signing đóng dấu -->
+<div class="signature-container" id="export-remote-signing-remote-image" style="width: 250px;min-height: 80px; display: flex; font-size: 9px;max-width: 300px">
+    <div style="position: relative;">
+        <img [src]='this.srcMark' style="width: 70%; height: 100%;z-index: 1; object-fit: contain">
+    </div>
+</div>
+<!-- Remote signing đóng dấu -->
+
