--- a/src/styles.scss
+++ b/src/styles.scss
@@ -113,5 +113,9 @@ body { margin: 0; font-family: font_lexend_deca , Roboto, "Helvetica Neue", sans
   max-width: 113px;
 }
 
+.my-custom-title-class {
+  color: #3085d6 !important;
+}
+
 
 
