[Update - New Logo] Cập nhật EC logo mới

--- a/src/app/admin/admin-main/admin-sidebar/admin-sidebar.component.html
+++ b/src/app/admin/admin-main/admin-sidebar/admin-sidebar.component.html
@@ -3,7 +3,7 @@
       <perfect-scrollbar>
         <div class="sidebar-header">
           <a (click)="openDashboard()">
-            <img src="assets/img/logo_eContract_21.svg" alt="Logo" class="img-responsive" width="185px" height="auto" />
+            <img src="assets/img/EC_new_logo.png" alt="Logo" class="img-responsive" width="185px" height="auto" />
           </a>
         </div>
   
