--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -35,7 +35,7 @@
           <div class="small-logo d-flex flex-column justify-content-center">
             <div>
               <img
-                src="../../assets/img/logo_eContract_21.svg"
+                src="../../assets/img/EC_new_logo.png"
                 width="300px"
                 style="max-width: 50%"
               />
@@ -165,7 +165,7 @@
         <div class="small-logo d-flex flex-column justify-content-center">
           <div>
             <img
-              src="../../assets/img/logo_eContract_21.svg"
+              src="../../assets/img/EC_new_logo.png"
               width="300px"
               style="max-width: 50%"
             />
