--- a/src/app/login/forgot-password/forgot-password.component.html
+++ b/src/app/login/forgot-password/forgot-password.component.html
@@ -27,7 +27,7 @@
       </div> -->
       <div class="small-logo d-flex flex-column justify-content-center">
         <div>
-          <img src="../../assets/img/logo_eContract_21.svg" width="300px" style="max-width: 50%;"/>
+          <img src="../../assets/img/EC_new_logo.png" width="300px" style="max-width: 50%;"/>
         </div>
       </div>
       <div class="input-form ng-touched ng-pristine ng-invalid">
