--- a/src/app/main/sidebar/sidebar.component.html
+++ b/src/app/main/sidebar/sidebar.component.html
@@ -3,7 +3,7 @@
     <perfect-scrollbar>
       <div class="sidebar-header">
         <a (click)="openDashboard()">
-          <img src="assets/img/EC_new_logo.png" alt="Logo" class="img-responsive" width="168px" height="auto" />
+          <img src="assets/img/EC_new_logo_v3.png" alt="Logo" class="img-responsive" width="168px" height="auto" />
         </a>
       </div>
 
