--- a/src/app/main/report/report-contract-send-email/report-contract-send-email.component.html
+++ b/src/app/main/report/report-contract-send-email/report-contract-send-email.component.html
@@ -60,7 +60,7 @@
             <td>{{list?.contractUId}}</td> <!--mã hđ-->
             <td>{{list?.contractNum}}</td> <!--số hđ-->
             <td>{{list?.contractName}}</td> <!--Tên HĐ-->
-            <td style="text-align: center; ">{{list?.email}}</td> <!--Email-->
+            <td>{{list?.email}}</td> <!--Email-->
             <td style="text-align: center; ">
               <img ngbTooltip="{{'content' | translate}}" src="../../../assets/img/icon_file_sms.svg" width="20px"
                 (click)="contentEmail(list?.id)" style="cursor: pointer;" />
