--- a/src/app/main/report/report-contract-send-email/report-contract-send-email.component.html
+++ b/src/app/main/report/report-contract-send-email/report-contract-send-email.component.html
@@ -57,16 +57,16 @@
       <ng-template pTemplate="body" let-list let-row="rowIndex">
         <tr>
           <ng-container *ngIf="row >= 0">
-            <td>{{list?.contractUId}}</td> <!--mã hđ-->
-            <td>{{list?.contractNum}}</td> <!--số hđ-->
-            <td>{{list?.contractName}}</td> <!--Tên HĐ-->
-            <td>{{list?.email}}</td> <!--Email-->
+            <td>{{list.contractUId}}</td> <!--mã hđ-->
+            <td>{{list.contractNum}}</td> <!--số hđ-->
+            <td>{{list.contractName}}</td> <!--Tên HĐ-->
+            <td>{{list.email}}</td> <!--Email-->
             <td style="text-align: center; ">
               <img ngbTooltip="{{'content' | translate}}" src="../../../assets/img/icon_file_sms.svg" width="20px"
-                (click)="contentEmail(list?.id)" style="cursor: pointer;" />
+                (click)="contentEmail(list.id)" style="cursor: pointer;" />
             </td>
-            <td>{{convertTime(list?.createDate)}}</td> <!--Thời gian gửi-->
-            <td style="text-align: center;">{{list?.contractStatus}}</td>
+            <td>{{convertTime(list.createDate)}}</td> <!--Thời gian gửi-->
+            <td style="text-align: center;">{{list.contractStatus}}</td>
           </ng-container>
         </tr>
       </ng-template>
