[Update - Ký đơn] Khi ký loại ký ko hỗ trợ ô text, disable các ô cần nhập value

--- a/src/app/main/contract-signature/components/consider-contract/consider-contract.component.html
+++ b/src/app/main/contract-signature/components/consider-contract/consider-contract.component.html
@@ -110,7 +110,9 @@
             (checkedChange)="switchesValueChange($event)" 
             *ngIf="![2,3].includes(recipient.status)" 
             [datas]="datas" [view]="[2,3].includes(recipient.status)" 
-            [sign]="d">
+            [sign]="d"
+            [isNotTextSupport]="isNotTextSupport"
+          >
           </app-image-sign-contract>
           <div *ngIf="this.flagFocus && d.sign_unit == 'text'" class="name-sig-img-daky long-text-ellipsis">{{(d.recipient && !d.valueSign) ? d.recipient.name : ''}}</div>
           <div *ngIf="d.sign_unit != 'text' && !this.flagFocus" class="name-sig-img-daky long-text-ellipsis">{{(d.recipient && !d.valueSign) ? d.recipient.name : ''}}</div>
