--- a/src/app/main/contract-signature/shared/model/edit-handler-dialog/edit-handler-dialog.component.html
+++ b/src/app/main/contract-signature/shared/model/edit-handler-dialog/edit-handler-dialog.component.html
@@ -13,8 +13,19 @@
         oninput="this.value = this.value.replace(/[^0-9.]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');"
         [disabled]="getOriganzationSignature().length == 1"> -->
 
-        <div style="padding-top: 10px; margin-left: 33px;">
-          <span class="label_detail text-color">{{'note.update.person.processing' | translate}}</span>
+        <div class="container" style="padding-top: 10px; margin-left: 33px;">
+          <div class="row" style="height: 38px;">
+            <div class="col-1">
+              <span class="label_detail text-color">{{'*Lưu ý:' | translate}}</span>
+            </div>
+            <div class="col-10">
+              <span class="label_detail text-color">{{'- Chỉ được cập nhật thông tin 1 lần/ người tham gia luồng xử lý' | translate}}</span>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-1"></div>
+            <span class="col-10 label_detail text-color">- Ký USB Token Ban cơ yếu, Sim PKI và Remote Signing không hỗ trợ nhập ô text/số hợp đồng</span>
+          </div>
         </div>
 
         <div class="col-md-10 participants__content--input" style="display: flex; flex-direction: column">
@@ -94,7 +105,7 @@
                     (onSelect)="onItemSelect($event)">
                     </ng-multiselect-dropdown>
                   </div>
-                  <div style="color: #ffc107;">({{'Ký USB Token Ban cơ yếu, Sim PKI và Remote Signing không hỗ trợ nhập ô text/số hợp đồng' | translate}})</div>
+                  <!-- <div style="color: #ffc107;">({{'Ký USB Token Ban cơ yếu, Sim PKI và Remote Signing không hỗ trợ nhập ô text/số hợp đồng' | translate}})</div> -->
             </div>
           </div>
         </div>
