--- a/src/app/main/contract-folder/current-folder/current-folder.component.html
+++ b/src/app/main/contract-folder/current-folder/current-folder.component.html
@@ -13,9 +13,12 @@
             </div>
         </div>
 
-        <div class="row">
-            <div class="col-md-6 btn-container" style="padding-top: 10px">
+        <div style="display: flex;">
+            <div class="" style="padding-top: 10px">
               <button (click)="addContract()" class="btn btn-lg btn-block btn_submit">Thêm hợp đồng</button>
+            </div>
+            <div class="" style="padding-top: 10px">
+                <button (click)="uploadContract()" class="btn btn-lg btn-block btn_submit">Tải lên</button>
             </div>
         </div>
 
