bo sung tim kiem theo ten HD,ma HD, so HD cho cac loai bao cao & fix bug thong bao khi cap nhat nguoi trong luong xu ly

--- a/src/app/main/report/report-soon-expire/report-soon-expire.component.html
+++ b/src/app/main/report/report-soon-expire/report-soon-expire.component.html
@@ -15,6 +15,13 @@
           </p-treeSelect>
             </div>
         </div>
+        
+        <div class="col-md-2">
+          <div>{{'contract.information' | translate}}</div>
+          <div class="input-line">
+            <input type="text" [(ngModel)]="contractInfo" class="input_text" placeholder="Tìm kiếm theo Mã HĐ, Số HĐ, Tên HĐ" />
+          </div>
+        </div>
 
         <!--Ngày tạo hợp đồng-->
         <div class="col-md-2">
