[Fix - uploadContractFile] Sửa màu status, call api sửa dữ liệu hđ

--- a/src/app/main/contract-folder/current-folder/current-folder.component.html
+++ b/src/app/main/contract-folder/current-folder/current-folder.component.html
@@ -51,9 +51,10 @@
 
                             <div class="row">
                                 <div class="item_contract_infor">{{'contract.status' | translate}}:
-                                    <span style="color: #027E21" class="status_blue">{{item.status | pipe | translate}}
-                                        {{getNameStatusCeca(item.status, item.ceca_push, item.ceca_status) |
-                                        translate}}</span>
+                                    <span
+                                        [style.color]="item.status == 35 ? 'red' : '#027E21'"
+                                        class="status_blue">{{item.status | pipe | translate}}
+                                    </span>
                                 </div>
                             </div>
 
